# flutter-notification-playground-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
docs/: API.md  database_design.md
myapp/: admin.py  models.py  serializers.py  views.py
myapp/migrations/: 0001_initial.py  0002_alter_hobby_user.py
myapp/serializers/: __init__.py  api_log_serializers.py  custom_user_serializers.py  femaleuser_serializers.py  maleuser_serializers.py  profile_image_serializers.py
myproject/: settings.py  urls.py
templates/: home.html
